Login Page initial

--- a/Hospital_Source_Code/Hospital_Source_Code/App.config
+++ b/Hospital_Source_Code/Hospital_Source_Code/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Hospital_Source_Code.Properties.Settings.HospitalDatabaseConnectionString"
+            connectionString="Data Source=SD-11;Initial Catalog=HospitalDatabase;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
