--- a/Hospital_Source_Code/Hospital_Source_Code/App.config
+++ b/Hospital_Source_Code/Hospital_Source_Code/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Hospital_Source_Code.Properties.Settings.HospitalDatabaseConnectionString" connectionString="Data Source=SD-11;Initial Catalog=HospitalDatabase;Integrated Security=True" providerName="System.Data.SqlClient"/>
+        <add name="HospitalCon" connectionString="Data Source=SD-11;Initial Catalog=HospitalDatabase;Integrated Security=True" providerName="System.Data.SqlClient"/>
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
