--- a/Hospital_Source_Code/Hospital_Source_Code/Hospital_Source_Code.csproj
+++ b/Hospital_Source_Code/Hospital_Source_Code/Hospital_Source_Code.csproj
@@ -63,6 +63,12 @@
     <Compile Include="Classes\PrescriptionDetails.cs" />
     <Compile Include="Classes\TestDetails.cs" />
     <Compile Include="Classes\VisitDetails.cs" />
+    <Compile Include="frmSearch.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSearch.Designer.cs">
+      <DependentUpon>frmSearch.cs</DependentUpon>
+    </Compile>
     <Compile Include="HomeDashboard.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -85,6 +91,9 @@
     <Compile Include="UserRole.cs" />
     <EmbeddedResource Include="AddLogin.resx">
       <DependentUpon>AddLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSearch.resx">
+      <DependentUpon>frmSearch.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HomeDashboard.resx">
       <DependentUpon>HomeDashboard.cs</DependentUpon>
