--- a/Hospital_Source_Code/Hospital_Source_Code/Hospital_Source_Code.csproj
+++ b/Hospital_Source_Code/Hospital_Source_Code/Hospital_Source_Code.csproj
@@ -85,6 +85,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchDoctorsSurname.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SearchDoctorsSurname.Designer.cs">
+      <DependentUpon>SearchDoctorsSurname.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserRole.cs" />
     <EmbeddedResource Include="AddLogin.resx">
       <DependentUpon>AddLogin.cs</DependentUpon>
@@ -105,6 +111,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SearchDoctorsSurname.resx">
+      <DependentUpon>SearchDoctorsSurname.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="HospitalDatabaseDataSet.xsc">
       <DependentUpon>HospitalDatabaseDataSet.xsd</DependentUpon>
     </None>
