--- a/Hospital_Source_Code/Hospital_Source_Code/Hospital_Source_Code.csproj
+++ b/Hospital_Source_Code/Hospital_Source_Code/Hospital_Source_Code.csproj
@@ -54,6 +54,12 @@
     <Compile Include="AddLogin.Designer.cs">
       <DependentUpon>AddLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="AdminDashboard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminDashboard.Designer.cs">
+      <DependentUpon>AdminDashboard.cs</DependentUpon>
+    </Compile>
     <Compile Include="Classes\Bill.cs" />
     <Compile Include="Classes\Doctor.cs" />
     <Compile Include="Classes\InPatientBill.cs" />
@@ -83,6 +89,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>HospitalDatabaseDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="PatientsDashboard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PatientsDashboard.Designer.cs">
+      <DependentUpon>PatientsDashboard.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SearchDoctorsSurname.cs">
@@ -95,11 +107,17 @@
     <EmbeddedResource Include="AddLogin.resx">
       <DependentUpon>AddLogin.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="AdminDashboard.resx">
+      <DependentUpon>AdminDashboard.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="HomeDashboard.resx">
       <DependentUpon>HomeDashboard.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PatientsDashboard.resx">
+      <DependentUpon>PatientsDashboard.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
