--- a/Hospital_Source_Code/Hospital_Source_Code/Hospital_Source_Code.csproj
+++ b/Hospital_Source_Code/Hospital_Source_Code/Hospital_Source_Code.csproj
@@ -72,6 +72,12 @@
     <Compile Include="DoctorsDashboard.Designer.cs">
       <DependentUpon>DoctorsDashboard.cs</DependentUpon>
     </Compile>
+    <Compile Include="BedDashboard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BedDashboard.Designer.cs">
+      <DependentUpon>BedDashboard.cs</DependentUpon>
+    </Compile>
     <Compile Include="HomeDashboard.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -115,6 +121,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DoctorsDashboard.resx">
       <DependentUpon>DoctorsDashboard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="BedDashboard.resx">
+      <DependentUpon>BedDashboard.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HomeDashboard.resx">
       <DependentUpon>HomeDashboard.cs</DependentUpon>
