--- a/Hospital_Source_Code/Hospital_Source_Code/Hospital_Source_Code.csproj
+++ b/Hospital_Source_Code/Hospital_Source_Code/Hospital_Source_Code.csproj
@@ -55,6 +55,7 @@
       <DependentUpon>AddLogin.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\Bill.cs" />
+    <Compile Include="Classes\Bed.cs" />
     <Compile Include="Classes\Doctor.cs" />
     <Compile Include="Classes\InPatientBill.cs" />
     <Compile Include="Classes\LoginModel.cs" />
